[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "internet-monitor-pro"
version = "0.1.23"
description = "Windows tray application for internet status, IP changes, speedtests and daily reports"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.8",
  "platformdirs>=4.3",
  "speedtest-cli>=2.1.3",
]

[project.scripts]
internet-monitor-pro = "internet_monitor_pro.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
